# project2_provorova_sasha_dpo

./: .gitignore  README.md  crud.cast  db_meta.json  decorations.cast  demo.cast  pyproject.toml
src/primitive_db/: core.py  decorators.py  engine.py  main.py  parser.py  utils.py
