[project]
name = "project2-provorova-sasha-dpo"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksandra Provorova",email = "sashaprovora@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "prompt (>=0.4.1,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" },
]

[tool.poetry.scripts]
project = "src.primitive_db.main:main"
database = "src.primitive_db.main:main"
[dependency-groups]
dev = [
    "ruff (>=0.14.14,<0.15.0)"
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []